# home-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
tablet-site/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
tablet-site-backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
tablet-site-backend/app/: __init__.py  main.py
tablet-site-backend/app/config/: settings.py
tablet-site-backend/app/routes/: __init__.py  dashboard.py
tablet-site-backend/app/schemas/: __init__.py  calendar_event.py  dashboard_now.py  dashboard_response.py  household_metric.py  meal.py  weather.py
tablet-site-backend/app/services/: __init__.py  dashboard_service.py  mealie_service.py  weather_service.py
tablet-site/src/: App.tsx  index.css
tablet-site/src/components/ui/: button.tsx  card.tsx  progress.tsx  scroll-area.tsx  tabs.tsx
tablet-site/src/features/dashboard/: HomeTabletDashboard.tsx
tablet-site/src/features/dashboard/api/: getDashboardData.ts  loadDashboardData.ts
tablet-site/src/features/dashboard/components/: CalendarCard.tsx  DashboardErrorState.tsx  DashboardLoadingState.tsx  EventRow.tsx  HeroCard.tsx  HouseholdCard.tsx  MealieCard.tsx  MetricPill.tsx  NextStepsCard.tsx  SectionTitle.tsx  UpcomingEventsCard.tsx  WeatherCard.tsx
tablet-site/src/features/dashboard/data/: demoData.ts
tablet-site/src/types/: dashboard.ts
